# IS-VINS

./: CMakeLists.txt  README.md
config/: euroc_config.yaml
include/: System.h  estimator.h  parameters.h
include/factor/: imu_factor.h  integration_base.h  linear9_factor.h  pose_graph_factors.h  projection_factor.h  relative_pose_factor.h  rollpitch_factor.h  se3_prior_factor.h  yaw_factor.h
include/feature_tracker/: feature_manager.h  feature_tracker_simple.h
include/initial/: initial_alignment.h  initial_sfm.h
include/msg/: msgtype.h
include/pose_graph/: keyframe.h  pose_graph.h  pose_graph_builder.h
include/utility/: eigen_file.h  factor_descent.h  sophus_utils.hpp  utility.h
src/: System.cpp  estimator.cpp  parameters.cpp
src/factor/: projection_factor.cpp
src/feature_tracker/: feature_manager.cpp  feature_tracker_simple.cpp
src/initial/: initial_aligment.cpp  initial_ex_rotation.cpp  initial_sfm.cpp
src/pose_graph/: keyframe.cpp  pose_graph.cpp  pose_graph_builder.cpp
test/: run_euroc.cpp
